--- a/COMP308-W2017-MidTerm-Start/server/views/books/index.ejs
+++ b/COMP308-W2017-MidTerm-Start/server/views/books/index.ejs
@@ -6,9 +6,9 @@
         <div class="col-md-offset-1 col-md-10">
           <h3>Favourite Books List </h3>
           <!-- ------------------------ -->
-          <!-- FIX THE ADD BUTTON BELOW -->
+          <!-- FIX THE ADD BUTTON BELOW in href-->
           <!-- ------------------------ -->
-          <a href="" class="btn btn-primary"><i class="fa fa-plus"></i> Add a book</a>
+          <a href="/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add Book</a>
           <br>
           <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
@@ -35,12 +35,15 @@
                     <!-- ------------------------ -->
                     <!-- ADD the EDIT BUTTON HERE -->
                     <!-- ------------------------ -->
+                    <a href="/:id" class="btn btn-primary"><i class="fa fa-plus"></i> Edit Book Details</a>
+
                   </td>
 
                   <td class="text-center">
                     <!-- ------------------------ -->
                     <!-- ADD the DELETE BUTTON HERE -->
                     <!-- ------------------------ -->
+                    <a href="/delete/:id" class="btn btn-primary"><i class="fa fa-plus"></i> Delete Book</a>
                   </td>
                 </tr>
                 <% } %>
