Test Href 3 - plus other changes

--- a/COMP308-W2017-MidTerm-Start/server/views/books/index.ejs
+++ b/COMP308-W2017-MidTerm-Start/server/views/books/index.ejs
@@ -8,7 +8,7 @@
           <!-- ------------------------ -->
           <!-- FIX THE ADD BUTTON BELOW in href-->
           <!-- ------------------------ -->
-          <a href="views/books/details" class="btn btn-primary"><i class="fa fa-plus"></i> Add Book</a>
+          <a href="views/books/details.ejs" class="btn btn-primary"><i class="fa fa-plus"></i> Add Book</a>
           <br>
           <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
