--- a/COMP308-W2017-MidTerm-Start/server/views/books/index.ejs
+++ b/COMP308-W2017-MidTerm-Start/server/views/books/index.ejs
@@ -23,7 +23,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <!-- Template Row <a href="/games/<%= games[count]._id %>" - <a href="/games/delete/<%= games[count]._id %>"-->
+                <!-- Template Row -->
                 <% for (let count = 0; count < books.length; count++) { %>
                 <tr>
                   <td><%= books[count].Title %></td>
