--- a/COMP308-W2017-MidTerm-Start/server/views/books/index.ejs
+++ b/COMP308-W2017-MidTerm-Start/server/views/books/index.ejs
@@ -32,15 +32,12 @@
                   <td class="text-center"><%= books[count].Genre %></td>
 
                   <td class="text-center">
-                    <a href="/books/:id" class="btn btn-primary"><i class="fa fa-plus"></i> Edit Book Details</a>
+                    <a href="/books/<%= books[count]._id %>" class="btn btn-primary"><i class="fa fa-plus"></i> Edit Book Details</a>
                        
                   </td>
 
                   <td class="text-center">
-                    <!-- ------------------------ -->
-                    <!-- ADD the DELETE BUTTON HERE -->
-                    <!-- ------------------------ -->
-                    <a href="/books/delete/:id" class="btn btn-primary"><i class="fa fa-plus"></i> Delete Book</a>
+                    <a href="/books/delete/<%= books[count]._id %>" class="btn btn-danger"><i class="fa fa-plus"></i> Delete Book</a>
                   </td>
                 </tr>
                 <% } %>
